--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,25 @@
 {
   "presets": [
     [
-      "@babel/preset-env",
+      "@babel/env",
       {
         "targets": {
-          "node": 6.0
+          "node": "current"
         }
       }
     ]
+  ],
+  "plugins": [
+    "@babel/transform-runtime",
+    [
+      "@babel/proposal-object-rest-spread",
+      {
+        "useBuiltIns": true
+      }
+    ]
+  ],
+  "only": [
+    "src/",
+    "test/"
   ]
 }
